--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -8,6 +8,9 @@ metadata:
 spec:
   image: {{ image }}
   port: 3000
+  replicas:
+    min: 1
+    max: 1
   resources:
     limits:
       cpu: 100m
