--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -21,6 +21,7 @@ spec:
   azure:
     application:
       enabled: true
+      tenant: nav.no
       claims:
         groups:
           - id: 'a2950e8a-9279-4fc7-94a8-730074d5b731' # helved-utsjekk-prosessering
