--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -35,6 +35,8 @@ spec:
       value: dev-gcp
     - name: UTSJEKK_SCOPE
       value: api://dev-gcp.helved.utsjekk/.default
+    - name: TASK_API_BASE_URL
+      value: http://utsjekk
   liveness:
     path: /internal/is-alive
     initialDelay: 10
