--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@navikt/ds-css": "^7.0.1",
         "@navikt/ds-react": "^7.0.1",
         "@navikt/ds-tokens": "^7.0.1",
+        "@navikt/next-logger": "^1.32.0",
         "@navikt/oasis": "^3.3.0",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
