--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "date-fns": "^3.6.0",
         "next": "^14.2.12",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@faker-js/faker": "^8.4.1",
