--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-    "name": "utsjekk-prosessering",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@navikt/aksel-icons": "^7.0.1",
-        "@navikt/ds-css": "^7.0.1",
-        "@navikt/ds-react": "^7.0.1",
-        "@navikt/ds-tokens": "^7.0.1",
-        "@navikt/next-logger": "^1.32.0",
-        "@navikt/oasis": "^3.4.0",
-        "clsx": "^2.1.1",
-        "date-fns": "^3.6.0",
-        "next": "^14.2.12",
-        "react": "^18",
-        "react-dom": "^18",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@faker-js/faker": "^8.4.1",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.3",
-        "prettier": "^3.2.5",
-        "typescript": "^5.5.4"
-    }
+  "name": "utsjekk-prosessering",
+  "version": "0.1.0",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "fake": "node --watch --experimental-strip-types ./fakes/server.ts"
+  },
+  "dependencies": {
+    "@navikt/aksel-icons": "^7.0.1",
+    "@navikt/ds-css": "^7.0.1",
+    "@navikt/ds-react": "^7.0.1",
+    "@navikt/ds-tokens": "^7.0.1",
+    "@navikt/next-logger": "^1.32.0",
+    "@navikt/oasis": "^3.4.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "next": "^14.2.12",
+    "react": "^18",
+    "react-dom": "^18",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@types/bun": "^1.1.10",
+    "@types/express": "^5.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "bun": "^1.1.29",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "express": "^4.21.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.5.4"
+  },
+  "engines": {
+    "node": "^22"
+  }
 }
