--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "express": "^4.21.0",
+    "pino-pretty": "^11.2.2",
     "prettier": "^3.2.5",
     "typescript": "^5.5.4"
   },
