--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fake": "node --watch --experimental-strip-types ./fakes/server.ts"
+    "test": "vitest",
+    "fake": "node --watch --experimental-strip-types test/fakes/server.ts"
   },
   "dependencies": {
     "@navikt/aksel-icons": "^7.0.1",
@@ -26,16 +27,22 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "express": "^4.21.0",
+    "jsdom": "^25.0.1",
+    "next-router-mock": "^0.9.13",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.2"
   },
   "engines": {
     "node": "^22"
