--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,6 +42,18 @@ jobs:
       - name: Build app
         run: npm run build
 
+      - name: Run unit tests
+        run: npm run test
+
+      - name: Run Playwright tests
+        run: npm run e2e-test
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 10
+
       - name: Push image
         uses: nais/docker-build-push@v0
         id: docker-build-push
