--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
+      - name: Install Playwright-deps
+        run: npx playwright install --with-deps chromium
+
       - name: Run Playwright tests
         run: npm run e2e-test
       - uses: actions/upload-artifact@v4
