--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,17 +45,17 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
-      - name: Install Playwright-deps
-        run: npx playwright install --with-deps chromium
-
-      - name: Run Playwright tests
-        run: npm run e2e-test
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 10
+#      - name: Install Playwright-deps
+#        run: npx playwright install --with-deps chromium
+#
+#      - name: Run Playwright tests
+#        run: npm run e2e-test
+#      - uses: actions/upload-artifact@v4
+#        if: always()
+#        with:
+#          name: playwright-report
+#          path: playwright-report/
+#          retention-days: 10
 
       - name: Push image
         uses: nais/docker-build-push@v0
