👷 Analyzer bundle ved PR/push

--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
   },
   "engines": {
     "node": "^22"
+  },
+  "nextBundleAnalysis": {
+    "budget": null,
+    "budgetPercentIncreaseRed": 20,
+    "minimumChangeThreshold": 0,
+    "showDetails": true
   }
 }
