--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -88,10 +88,21 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: .nais/dev.yaml
           IMAGE: ${{ needs.build.outputs.image }}
-#      - uses: nais/deploy/actions/deploy@v1
-#        if: github.ref == 'refs/heads/main'
-#        env:
-#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#          CLUSTER: prod-gcp
-#          RESOURCE: nais-prod.yaml
-#          IMAGE: ${{ needs.build.outputs.image }}
+
+  deploy-prod:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Deploy
+        uses: nais/deploy/actions/deploy@v2
+        if: github.ref == 'refs/heads/main'
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: .nais/prod.yaml
+          IMAGE: ${{ needs.build.outputs.image }}
