--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -28,6 +28,13 @@ spec:
     outbound:
       rules:
         - application: utsjekk
+    inbound:
+      rules:
+        # generer obo token: https://azure-token-generator.intern.dev.nav.no/api/obo?aud=dev-gcp.helved.helved-peisen
+        #ref https://docs.nais.io/auth/entra-id/how-to/generate/?h=azure+token
+        - application: azure-token-generator
+          namespace: aura
+          cluster: dev-gcp
   env:
     - name: NEXT_PUBLIC_HOSTNAME
       value: https://peisen.intern.dev.nav.no
